--- a/validation_lib2/formValidation2.html
+++ b/validation_lib2/formValidation2.html
@@ -30,13 +30,15 @@
               <span class="form-message text-danger text-small"></span>
             </div>
             <div class="form-group">
-              <label for="email">Email address:</label>
-              <input type="email" name="email" rules="required|email" class="form-control" placeholder="VD:  tvminh@gmail.com">
-              <span class="form-message text-danger text-small"></span>
+              <div class="linhtinh">
+                <label for="email">Email address:</label>
+                <input type="email" name="email" rules="required|email" class="form-control" placeholder="VD:  tvminh@gmail.com">
+                <span class="form-message text-danger text-small"></span>
+              </div>
             </div>
             <div class="form-group">
               <label for="password">Password:</label>
-              <input type="text" name="password" rules="required|min:6:9" class="form-control">
+              <input type="text" name="password" rules="required|min:6" class="form-control">
               <span class="form-message text-danger text-small"></span>
             </div>
             <div class="form-group">
